--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
     "esModuleInterop": true, //允许通过es6语法引入commonjs模块;
     "jsx": "preserve", //jsx不转义;
     "lib": ["esnext", "dom"], //支持的类库 esnext及dom;
-    "baseUrl": ".",
+    "baseUrl": ".", //基础url,即此时代码运行时根目录为当前目录;
     "paths": {
-      "@vue/*": ["packages/*/src"]
+      "@vue/*": ["packages/*/src"] //如果遇到"@vue/目录名"的文件去到"packages/目录名/src"去找引用;
     }
   }
 }
