--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node script/dev.js reactivity -f global"
+    "dev": "node script/dev.js runtime-dom -f global"
   },
   "keywords": [],
   "author": "",
