把template中的代码编译成虚拟节点,这便是VueCompilerCore的compile()函数的作用;compile()函数主要分为三个部份: 1.将模板转成抽象语法树-ast语法树; 2.对ast语法树进行一些预先处理; 3.代码生成; 目前做到compile()的第1部份-用parse()将html语法转换成js语法;而parse()又根据当前template解析到的部份,用template内容开头部份将template上下文类型分成三部份,对文本进行处理,对标签进行处理,对表达式进行处理; 目前先进行了对文本的处理;  解析文本节点主要是先创建开始的选型信息,并将开始及结束信息及文本内容返回出去,同时标识该节点为文本类型;

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node script/dev.js runtime-dom -f global"
+    "dev": "node script/dev.js compiler-core -f global"
   },
   "keywords": [],
   "author": "",
